adding expected code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="section">
+        <div class="half-width">
+            <h1>Hello, I'm </h1>
+            <h1> <span class="specific-color">Naeem Mahmud</span></h1>
+            <p>A full stack allaround designer that placerat in massa consectetu.</p>
+            <a class="button" href="https://web.programming-hero.com/web-3/video/web-3-welcome-to-complete-web-development-course">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pic1.png" alt="">
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="half-width">
+            <img src="images/pic2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to make a type
+                specimen book.</p>
+                <a class="button" href="https://web.facebook.com/profile.php?id=100014514373434">Download CV</a>
+
+        </div>
+    </section>
+
+    <section class="big">
+        <h3><span class="specific-color">LASTEST</span> WORKING PROJECT</h3>
+        <div class="gray-dev">
+            <img src="images/image 4.png" alt="">
+            <h4>Power-x-gym (gym website)</h4>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.</p>
+
+        </div>
+        <div class="gray-dev">
+            <img src="images/image 5.png" alt="">
+            <h4>Creative Agency</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+
+        </div>
+        <div class="gray-dev">
+            <img src="images/image 8.png" alt="">
+            <h4>Hard Rock Music</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
+    <section id="section-four">
+        <div class="float">
+            <p id="work"><strong>WORK INQUIRY</strong></p>
+        </div>
+        <div id="let" class="float">
+            <a class="button" id="let" href="https://web.facebook.com/profile.php?id=100014514373434">Let's chat</a>
+        </div>
+    </section>
+    <footer>
+        ©Naeem Mahmud 2021, all rights reserved.
+    </footer>
 </body>
 </html>
