--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
         <div id="let" class="float">
             <a class="button" id="let" href="https://web.facebook.com/profile.php?id=100014514373434">Let's chat</a>
         </div>
+    </section> 
+    <section>
+        <div class="contact">
+            <h1>My Location</h1>
+            <p>123 Fifth Avenue,</p>
+            <p>New Yourk,</p>
+            <p>NY 10160</p>
+            
+
+        </div>
+        <div class="contact">
+            <h1>Contact Details</h1>
+            <p>Phone:</p>
+            <p>+743-737583-74</p>
+            <p>Email:</p>
+            <p>naeem8438@gmail.com</p>
+        </div>
+        <div class="contact">
+            <h1>Follow Me</h1>
+            <img src="icon/icon1.webp" alt="">
+            <img src="icon/icon2.webp" alt="">
+            <img src="icon/icon4.webp" alt="">
+            <img src="icon/icon5.webp" alt="">
+
+        </div>
     </section>
     <footer>
         ©Naeem Mahmud 2021, all rights reserved.
